--- a/templates/publicaciones.html
+++ b/templates/publicaciones.html
@@ -48,9 +48,11 @@
         
     </div>
     <div class="contenido"> 
-        <form action="{{ url_for('crear_publicacion') }}" method="POST">
+        <form action="{{ url_for('crear_publicacion') }}" method="POST" enctype="multipart/form-data">
             <p>¿Qué estás pensando {{ user.username }}?</p>
             <textarea name="contenido" placeholder="Escribe tu publicación..." required></textarea><br><br>
+            <label for="foto_publicacion">Cargar foto:</label>
+            <input type="file" id="foto_publicacion" name="foto_publicacion" accept="image/*"><br><br>
             <button type="submit">Publicar</button>
         </form>
     </div>
@@ -80,8 +82,12 @@
                             </p>
                             <div class="publiuser">                    
                                 <p>{{ publicacion.contenido }}</p>
+                                {% if publicacion.foto_publicacion %}
+                                    <img src="data:image/png;base64,{{ publicacion.foto_publicacion }}" alt="Foto">
+                                {% endif %}
                                 <form action="{{ url_for('responder_publicacion', id_publicacion=publicacion.id_publicacion) }}" method="POST">
                                     <textarea name="respuesta" placeholder="Comentar" required></textarea>
+                                    
                                     <button type="submit">Enviar</button>
                                 </form>
                             </div> 
