--- a/templates/editar_perfil.html
+++ b/templates/editar_perfil.html
@@ -7,21 +7,32 @@
 </head>
 <body>
     <h1>Editar Perfil</h1>
+
+    <!-- Formulario para editar datos de usuario -->
     <form method="POST" action="{{ url_for('editar_perfil') }}">
         <label for="nuevo_nombre">Nombre Usuario:</label>
         <input type="text" id="nuevo_nombre" name="nuevo_nombre" value="{{ user['username'] }}" required><br><br>
     
         <label for="nuevo_mensaje">Descripción:</label><br>
         <textarea id="nuevo_mensaje" name="nuevo_mensaje" rows="4">{{ user['mensaje'] }}</textarea><br><br>
-    
+
         <button type="submit">Guardar cambios</button><br><br>
     
         {% if error %}
         <p style="color: red;">{{ mensaje }}</p>
         {% endif %}
     </form>
-    
-    
+
+    <!-- Formulario para subir imagen de perfil -->
+    <form action="{{ url_for('editar_perfil') }}" method="post" enctype="multipart/form-data">
+        <label for="file">Selecciona una imagen para subir:</label>
+        <input type="file" name="file" id="file" required>
+        <button type="submit">Subir</button>
+    </form>
+
+    {% if success %}
+    <p>Imagen subida con éxito: <a href="{{ image_url }}" target="_blank">Ver imagen</a></p>
+    {% endif %}
 
     <a href="{{ url_for('perfil', id_usuario=user.id) }}">Volver al perfil</a>
 </body>
