--- a/templates/editar_perfil.html
+++ b/templates/editar_perfil.html
@@ -27,8 +27,8 @@
                 <label for="nuevo_mensaje">Descripción:</label><br>
                 <textarea id="nuevo_mensaje" name="nuevo_mensaje" rows="4">{{ user['mensaje'] }}</textarea><br><br>
                 
-                <label for="foto_perfil">Cargar foto de perfil:</label>
-                <input type="file" id="foto_perfil" name="foto_perfil" accept="image/*"><br><br>
+                <label for="foto_perfil" class="label1">Subir foto</label>
+                <input type="file" id="foto_perfil" name="foto_perfil" accept="image/*" class="cargar"><br><br>
 
                 <button type="submit">Guardar</button><br><br>
             
