--- a/static/CSS/publicaciones.css
+++ b/static/CSS/publicaciones.css
@@ -1,180 +1,269 @@
-body {
-    margin: 0;
-    color: white;
-    background-color: #02001b;
-    font-family:Verdana, Geneva, Tahoma, sans-serif; 
-}
+    body {
+        margin: 0;
+        color: white;
+        background-color: #02001b;
+        font-family:Verdana, Geneva, Tahoma, sans-serif; 
+    }
 
-a {
-    text-decoration: none;
-    color: white;
-    font-size: 20px;
-    padding: 0 1.5%;
-}
+    a {
+        text-decoration: none;
+        color: white;
+        font-size: 20px;
+        padding: 0 1.5%;
+    }
 
-hr {
-    color: white;
-}
+    hr {
+        color: white;
+    }
 
-ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
+    ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+    }
 
-.barra_s {
-    width: 100%;
-    background: #02001b;
-    position: fixed;
-    display: flex;
-    align-items: center; /* Centrar verticalmente los elementos */
-    padding: 10px 20px; /* Espaciado interno */
-    box-sizing: border-box; /* Asegura que el padding no rompa el diseño */
-    border-bottom: 2px solid white;
-}
+    .barra_s {
+        width: 100%;
+        background: #02001b;
+        position: fixed;
+        display: flex;
+        align-items: center; /* Centrar verticalmente los elementos */
+        padding: 10px 20px; /* Espaciado interno */
+        box-sizing: border-box; /* Asegura que el padding no rompa el diseño */
+        border-bottom: 2px solid white;
+    }
 
-.img1 {
-    width: 50px; /* Tamaño fijo más manejable */
-    height: 50px;
-    border-radius: 50%;
-    object-fit: cover; /* Asegura que la imagen mantenga proporciones */
-    border: 2px solid white;
-}
+    .img1 {
+        width: 50px; /* Tamaño fijo más manejable */
+        height: 50px;
+        border-radius: 50%;
+        object-fit: cover; /* Asegura que la imagen mantenga proporciones */
+        border: 2px solid white;
+    }
 
-.s1 {
-    flex: 0 0 auto; /* La imagen no se redimensiona */
-}
+    .s1 {
+        flex: 0 0 auto; /* La imagen no se redimensiona */
+    }
 
-.s2 {
-    flex: 1; /* Ocupa todo el espacio restante */
-    display: block; /* Flexbox interno */
-    text-align: center; /* Centra el contenido */
-}
+    .s2 {
+        flex: 1; /* Ocupa todo el espacio restante */
+        display: block; /* Flexbox interno */
+        text-align: center; /* Centra el contenido */
+    }
 
-.s2 input {
-    width: 20%; /* Ancho de la barra de búsqueda */
-    height: 35px; /* Alto de la barra de búsqueda */
-    padding: 5px 10px; /* Espaciado interno */
-    border: 2px solid #ccc; 
-    border-radius: 38px;
-    background-color: #030031;
-    outline: none;
-    font-size: 16px;
-    color: white;
-}
-.contenido{
-    padding-top: 100px;
-    padding-bottom: 20px;
-    display: block;
-    margin: 0 auto; 
-    width: 60%;
-    border-bottom: 2px solid white;
-    text-align: center;
-    font-size: 20px;
+    .s2 input {
+        width: 20%; /* Ancho de la barra de búsqueda */
+        height: 35px; /* Alto de la barra de búsqueda */
+        padding: 5px 10px; /* Espaciado interno */
+        border: 2px solid #ccc; 
+        border-radius: 38px;
+        background-color: #030031;
+        outline: none;
+        font-size: 16px;
+        color: white;
+    }
+    .contenido{
+        padding-top: 100px;
+        padding-bottom: 20px;
+        display: block;
+        margin: 0 auto; 
+        width: 60%;
+        border-bottom: 2px solid white;
+        text-align: center;
+        font-size: 20px;
 
 
-}
+    }
 
-.img2{
-    padding-top: 10px;
-    width: 60%;
-    height: auto;
-}
+    .img2{
+        padding-top: 10px;
+        width: 60%;
+        height: auto;
+    }
 
-.contenido textarea{
-    width: 60%;
-    height: auto;
-    min-height: 90px;
-    background-color:  #030031;
-    color: white;
-    padding: 10px;
-    border-radius: 10px;
-    border: 2px solid white;
-    resize: none;
-}
+    .contenido textarea{
+        width: 60%;
+        height: auto;
+        min-height: 90px;
+        background-color:  #030031;
+        color: white;
+        padding: 10px;
+        border-radius: 10px;
+        border: 2px solid white;
+        resize: none;
+    }
+    .cargar{
+        color:white;
+        background-color: #02001b;
+        border-radius: 20px ;
+        border: 2px white solid;
+        padding: 2px;
+        display: none;
+    }
+    .label1:hover{
+        color:#02001b;
+        background-color: white;
+        border-radius: 20px;
+        border: #1e0ffc5b solid 2px;
+        padding: 5px;
+    }
 
-.contenido button{
-    border: 2px solid white;
-    border-radius: 20px;
-    width: 10%;
-    height: auto;
-    min-height: 30px;
-    color: white;
-    background-color: #030031;
-}
-.contenido button:hover{
-    color: #030031;;
-    background-color: white; 
-}
-.contenido1{
-    margin-top: 30px;
-    padding-bottom: 20px;
-    display: block;
-    margin: 0 auto; 
-    width: 60%;
-    border-bottom: 2px solid white;
-    text-align: center;
-    font-size: 20px;
-}
-.text1{
-    padding-top: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.complemento{
-    width: 40%;
-    border: 2px white solid;
-}
-.circulo{
-    width: 50px;
-    height: 50px;
-    border: 2px white solid;
-    border-radius: 50%;
-}
-.img2{
-    margin: 0;
-    border: 0;
-    padding: 0px;
-    width: 100%;
-    height: 100%;
-}
-.publiuser{
-    margin:0 10%;
-    padding: 0.2% 2%;
-    background-color: #02001b; ; 
-    width: 80%;
-    display: block;
-    text-align: center;
-    text-align: left;
-    border-radius: 10px;
-    border: 3px solid;
-    border-color:  #05004491;
-}
-.likeuser{
-    margin:1% 9%;
-    display: flex;
-    justify-content: end;
-    width: 80%;
-}
-.img3{
-    width: 5%;
-    
-}
-.btnlike{
-    display: flex;
-    justify-content: end;
-    background-color: #02001b;
-    border: none;  
-}
-.li1{
-    border-bottom: 2px  #050044b4 solid;
-    width: 80%;
-    margin: 0 10%;
-    display: block;
-}
-.p1{
-    margin-left: 10%;
-    display: flex;
-    justify-content: start;
-}
+    .contenido button{
+        border: 2px solid white;
+        border-radius: 20px;
+        width: 10%;
+        height: auto;
+        min-height: 30px;
+        color: white;
+        background-color: #030031;
+    }
+    .contenido button:hover{
+        color: #030031;;
+        background-color: white; 
+    }
+    .contenido1{
+        margin-top: 30px;
+        padding-bottom: 20px;
+        display: block;
+        margin: 0 auto; 
+        width: 60%;
+        border-bottom: 2px solid white;
+        text-align: center;
+        font-size: 20px;
+    }
+    .text1{
+        padding-top: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .complemento{
+        width: 40%;
+        border: 2px white solid;
+    }
+    .circulo{
+        width: 50px;
+        height: 50px;
+        border: 2px white solid;
+        border-radius: 50%;
+    }
+    .img2{
+        margin: 0;
+        border: 0;
+        padding: 0px;
+        width: 100%;
+        height: 100%;
+    }
+    .publiuser{
+        background-color:#02001b;
+        margin:0 auto;
+        padding: 0.2% 2%;
+        width: 80%;
+        display: block;
+        text-align: left;
+        border-radius: 10px;
+        border: 3px solid  #00307969;
+    }
+    .likeuser{
+        margin:0 auto;
+        padding-top: 10px;
+        display: flex;
+        width: 80%;
+        height: 120px;
+        justify-content: space-between;
+    }
+    .partelike{
+        display: flex;
+        justify-content: end;   
+        align-items:unsafe;
+        width: 30%;
+    }
+    .respuesta{
+        width: 60%;
+        height: 100px;
+        display: block;
+    }
+    .respuesta textarea{
+        background-color: #02001b;
+        border: 3px solid #00307969;
+        width: 100%;
+        height: 60px;
+        resize: none;
+        border-radius:20px ;
+        padding: 10px;
+        color: white;
+
+    }
+
+    .respuesta button{
+        width: 20%;
+        height: 25px;
+        border-radius: 15px;
+        border: 2px solid white;
+        background-color: #02001b;
+        color: white;
+    }
+    .respuesta button:hover{
+        border: 2px solid #02001b;
+        background-color: #ffffff;
+        color: #02001b;
+    }
+
+    .likeuser1{
+        margin:0 auto;
+        padding: 1% 10%;
+        display: flex;
+        justify-content: end;
+        width: 55%;
+        border-bottom: 2px solid  #050044b4;
+    }
+    .img3{
+        width: 80%;
+        padding: 0;
+        
+    }
+    .img4{
+        width: 5%;
+    }
+    .btnlike{
+        background-color: #030031;   
+        width: 35px;
+        height: 30px;
+        padding: 0;
+        margin: 0;
+        border: none;
+    }
+
+    .btnlike1{
+        display: flex;
+        justify-content: end;
+        background-color: #02001b;
+        border: none;  
+    }
+
+
+    .ul{
+        margin:0 auto;
+    }
+
+    .li1{
+        border-bottom: 2px  #050044b4 solid;
+        width: 90%;
+        margin: 0 auto;
+        display: block;
+        text-align: center;
+        justify-content: center;
+    }
+
+
+    .li2{
+        width: 70%;
+        margin: 0% auto;
+        display: block;
+    }
+
+    .p1{
+        display: flex;
+        margin-left: 7%;
+        justify-content: start;
+    }
