--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -58,7 +58,7 @@
     </div>
     <div class="containerpu"> 
         <ul>
-            {% for publicacion in publicaciones %}
+            {% for publicacion in publicaciones_usuario %}
                 <li class="li1">
                     <p class="p1">
                         <a href="{{ url_for('perfil', id_usuario=publicacion.id_usuario) }}">
@@ -67,49 +67,66 @@
                     </p>
                     <div class="publiuser">                    
                         <p>{{ publicacion.contenido }}</p>
+                        {% if publicacion.foto_publicacion %}
+                            <img src="data:image/png;base64,{{ publicacion.foto_publicacion }}" alt="Foto">
+                        {% endif %}
                     </div>  
                     <div class="likeuser">
-                        
-                        <div>
+                        <div class="respuesta">
+                            <form action="{{ url_for('responder_publicacion', id_publicacion=publicacion.id_publicacion) }}" method="POST">
+                                <textarea name="respuesta" placeholder="Comentar" required></textarea><br>
+                                <button type="submit">Enviar</button>
+                                
+                            </form> 
+                        </div>
+                        <div class="partelike">
                             <form action="{{ url_for('likear_publicacion', id_publicacion=publicacion.id_publicacion) }}" method="GET">
                                 {% if publicacion.like %}
                                     <button type="submit" class="btnlike"><img src="{{url_for('static', filename='./Images/like.png')}}" class="img3"></button>
                                 {% else %}
                                     <button type="submit" class="btnlike"><img src="{{url_for('static', filename='./Images/fotounlike.png')}}" class="img3"></button>
                                 {% endif %}
+                                {{ publicacion.cant_likes}}
+                               
                             </form>    
                         </div>
-                        <div>
-                            {{ publicacion.cant_likes}}
-                            
-                        </div>
                     </div>
-                    <br>
-                </li>
-            {% endfor %}
-        </ul>
-        <!--
-        <ul>
+                    
+                    <div> <!-- Respuestas -->
+                        {% for respuesta in publicaciones %}
+                            {% if respuesta.id_respuesta == publicacion.id_publicacion %}
+                                <li class="li2">
+                                    <p class="p1">
+                                        <a href="{{ url_for('perfil', id_usuario=respuesta.id_usuario) }}">
+                                            {{ respuesta.nombre_usuario }} 
+                                        </a> ({{ respuesta.fecha }})
+                                    </p>
+                                    <div class="publiuser">
+                                        <p>{{ respuesta.contenido }}</p>
+                                    </div>
+                                </li>
 
-            {% for publicacion in publicaciones %}
-                <li>
-                    <p><strong>{{ publicacion.nombre_usuario }}</strong> - <em>{{ publicacion.fecha }}</em></p>
-                    <p>{{ publicacion.contenido }}</p>
-                    <form action="{{ url_for('likear_publicacion', id_publicacion=publicacion.id_publicacion) }}" method="GET">
-                        <input type="hidden" name="next_url" value="{{ request.path }}">
-                        
-                        {% if publicacion.like %}
-                            <button type="submit">Unlikear</button>
-                        {% else %}
-                            <button type="submit">Likear</button>
-                        {% endif %}
-                        {{ publicacion.cant_likes }}
-                    </form>
-                    <br>
+                                <div class="likeuser1">
+                                    <div>
+                                        <form action="{{ url_for('likear_publicacion', id_publicacion=respuesta.id_publicacion) }}" method="GET">
+                                            {% if respuesta.like %}
+                                                <button type="submit" class="btnlike"><img src="{{url_for('static', filename='./Images/like.png')}}" class="img3"></button>
+                                            {% else %}
+                                                <button type="submit" class="btnlike"><img src="{{url_for('static', filename='./Images/fotounlike.png')}}" class="img3"></button>
+                                            {% endif %}
+                                        </form>    
+                                    </div>
+                                    <div>
+                                        {{ respuesta.cant_likes }}
+                                    </div>
+                                </div>
+                            {% endif %}
+                        {% endfor %}
+                    </div>
                 </li>
             {% endfor %}
         </ul>
-        -->
+
     </div>
 </body>
 </html>
